@@ -75,7 +75,8 @@ common_src=buffer.c log.c \
 	network_write_mmap.c network_write_no_mmap.c \
 	network_freebsd_sendfile.c network_writev.c \
 	network_solaris_sendfilev.c network_openssl.c \
-	splaytree.c status_counter.c
+	splaytree.c status_counter.c \
+	safe_memclear.c
 
 src = server.c response.c connections.c network.c \
 	configfile.c configparser.c request.c proc_open.c
@@ -278,7 +279,7 @@ hdr = server.h buffer.h network.h log.h keyvalue.h \
 	mod_ssi.h mod_ssi_expr.h inet_ntop_cache.h \
 	configparser.h mod_ssi_exprparser.h \
 	sys-mmap.h sys-socket.h mod_cml.h mod_cml_funcs.h \
-	splaytree.h proc_open.h status_counter.h \
+	safe_memclear.h splaytree.h proc_open.h status_counter.h \
 	mod_magnet_cache.h \
 	version.h
 
